test/Neg/termina/resource_class/action.fin
interface TMChannelInterface {
    procedure get_tm_sent_packets(&mut self, packets : &mut u32);
};

resource class TMChannel provides TMChannelInterface {
    
  tm_sent_packets : u32;

  action send_packet(&mut self, input : u32) -> Result {
    var ret : Result = Result::Ok;
    return ret;
  }

  procedure get_tm_sent_packets(&mut self, packets : &mut u32) {
    *packets = self->tm_sent_packets;
    return;
  }

};